Desarrollo formalización de reserva en payComponent

--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -151,7 +151,7 @@
                                 </div>
                             </div>
                             <div class="pay__book-form-controls col-lg-2 pb-4 mt-4 mt-lg-2">
-                                <button class="consulta__form-submit btn btn-secondary" type="submit">PAGAR</button>
+                                <button class="consulta__form-submit btn btn-secondary" type="submit" (click)="createBooking()">PAGAR</button>
                             </div>
                         </div>
                     </form>
