Creación componente top-button e incorporación a todos los componentes del proyecto

--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -69,3 +69,4 @@
   </div>
 </main>
 <ngx-spinner bdColor = "rgba(0,0,0,0.4)" size = "medium" color = "#272a57" type = "ball-square-spin" [fullScreen] = "true"></ngx-spinner>
+<app-top-button></app-top-button>
