--- a/src/app/components/admin/admin-books/admin-books.component.html
+++ b/src/app/components/admin/admin-books/admin-books.component.html
@@ -242,3 +242,4 @@
     </div>
     <ngx-spinner bdColor = "rgba(0,0,0,0.4)" size = "medium" color = "#272a57" type = "ball-square-spin" [fullScreen] = "true"></ngx-spinner>
 </main>
+<app-top-button></app-top-button>
