--- a/src/app/components/admin/admin-users/admin-users.component.html
+++ b/src/app/components/admin/admin-users/admin-users.component.html
@@ -404,6 +404,7 @@
             </section>
         </section>
     </div>
-    <ngx-spinner bdColor="rgba(0,0,0,0.4)" size="medium" color="#272a57" type="ball-square-spin"
-        [fullScreen]="true"></ngx-spinner>
 </main>
+<ngx-spinner bdColor="rgba(0,0,0,0.4)" size="medium" color="#272a57" type="ball-square-spin"
+    [fullScreen]="true"></ngx-spinner>
+<app-top-button></app-top-button>
