--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -182,3 +182,4 @@
 <app-footer></app-footer>
 <ngx-spinner bdColor="rgba(0,0,0,0.4)" size="medium" color="#272a57" type="ball-square-spin"
   [fullScreen]="true"></ngx-spinner>
+<app-top-button></app-top-button>
