--- a/src/styles.css
+++ b/src/styles.css
@@ -2226,6 +2226,13 @@ body {
 .header__logo {
   display: none;
 }
+.header__icon {
+  transition: fill 0.3s ease, transform 0.3s ease;
+}
+.header__icon:hover {
+  fill: white;
+  transform: scale(1.1);
+}
 .header__buttons {
   display: none;
 }
