--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -77,26 +77,20 @@
                 <div class="pay__book-form mb-4">
                     <div class="pay__book-form-title mt-3 d-flex justify-content-between">
                         <div class="pay__book-form-text">Datos de pago</div>
-                        <div class="pay__book-form-cards d-flex justify-content-center align-items-center me-2" data-bs-toggle="collapse" href="#myCards" role="button" aria-expanded="false" aria-controls="mis tarjetas">
+                        <div class="pay__book-form-cards d-flex justify-content-center align-items-center me-2" data-bs-toggle="collapse" href="#myCards" role="button" aria-expanded="false" aria-controls="mis tarjetas" *ngIf="show">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272A57" class="bi bi-credit-card-2-back-fill" viewBox="0 0 16 16">
                                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1z"/>
                                   </svg> Mis tarjetas</div>
                         </div>
                     </div>
-                    <div class="collapse col-lg-6 offset-lg-6 mt-2" id="myCards">
+                    <div class="collapse col-lg-6 offset-lg-6 mt-2" id="myCards" *ngIf="show">
                         <div class="card card-body">
                             <div class="pay__book-details-info mb-2">Selecciona tarjeta:</div>
-                            <div class="form-check mt-1">
-                                <input class="form-check-input" type="radio" name="card">
+                            <div class="form-check mt-1" *ngFor="let card of this.clientCards">
+                                <input class="form-check-input" type="radio" name="card" (change)="updateFormFields(card)">
                                 <label class="pay__book-details-info form-check-label " for="card">
-                                    ****-****-****-1234
-                                </label>
-                            </div>
-                            <div class="form-check mt-1">
-                                <input class="form-check-input" type="radio" name="card">
-                                <label class="pay__book-details-info form-check-label " for="card">
-                                    ****-****-****-5678
+                                    <div class="d-inline-block">Número: **** - **** - **** - {{card.number | slice:12:16}}</div><div class="d-inline-block ms-2">Caducidad: {{card.expirationDate}}</div><div class="d-inline-block ms-2">CVC: {{card.cvv}}</div><div class="d-inline-block ms-2">Titular: {{card.owner}}</div>
                                 </label>
                             </div>
                         </div>
@@ -153,6 +147,7 @@
                             <div class="pay__book-form-controls col-lg-2 pb-4 mt-4 mt-lg-2">
                                 <button class="consulta__form-submit btn btn-secondary" type="submit" (click)="createBooking()">PAGAR</button>
                             </div>
+                            <div class="text-center text-message mb-4">{{this.payError}}</div>
                         </div>
                     </form>
 
