Desarrollo de faqsComponent

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
         <nav
             class="footer__links col-lg-4 order-4 order-lg-2 d-flex flex-column justify-content-lg-around align-items-center navbar-nav">
             <a href="" class="footer__link nav-link">Contacto / Atención al cliente</a>
-            <a href="" class="footer__link nav-link">FAQs / Preguntas frecuentes</a>
+            <a href="faqs" class="footer__link nav-link">FAQs / Preguntas frecuentes</a>
             <a class="footer__link nav-link">&copy; Todos los derechos reservados</a>
         </nav>
         <div
