--- a/src/styles.css
+++ b/src/styles.css
@@ -3383,3 +3383,47 @@ body {
     padding-right: 2rem;
   }
 }
+
+@media (min-width: 992px) {
+  .faqs {
+    min-height: calc(100vh - 18.4rem);
+  }
+}
+
+.faqs__accordion-title{
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #272A57;
+}
+
+.faqs__accordion-button-title{
+  font-size: 1rem;
+  color: #5B5E85 !important;
+}
+
+.faqs__accordion-button-content{
+  font-size: 0.875rem;
+  color: #5B5E85 !important;
+}
+
+.accordion-button {
+  background-color: #FFFFFF;
+  transition: background-color 0.3s ease;
+  color: #272A57!important;
+}
+
+.accordion-button:hover,
+.accordion-button:focus {
+  background-color: #FFFFFF !important;
+  color: #272A57!important;
+  box-shadow: none;
+
+}
+
+.accordion-body {
+  background-color: #FFFFFF;
+}
+
+.accordion-button:not(.collapsed):not(:hover) {
+  background-color: #FFFFFF !important;
+}
