--- a/src/app/components/consulta/consulta.component.html
+++ b/src/app/components/consulta/consulta.component.html
@@ -314,7 +314,7 @@
               </div>
               <div class="consulta__results-alohamiento-description row mt-4">
                 <div>
-                  {{ item.accommodation.description }}
+                  {{ item.accommodation.description.substring(0, 250) }}[...]
                 </div>
               </div>
             </div>
