--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -14,8 +14,8 @@
                 <div class="inicio__card border border-1 p-4">
                     <form>
                         <div class="inicio__card-form d-flex flex-column justify-content-between flex-md-row">
-                            <input type="checkbox" class="inicio__card-check btn-check" id="casas"
-                                autocomplete="off" [(ngModel)]="houses" name="houses">
+                            <input type="checkbox" class="inicio__card-check btn-check" id="casas" autocomplete="off"
+                                [(ngModel)]="houses" name="houses">
                             <label
                                 class="inicio__card-checklabel btn btn-outline-secondary d-flex justify-content-center align-items-center"
                                 for="casas">
@@ -26,8 +26,8 @@
                                 </svg>
                                 <span class="inicio__card-checklabel-text ms-2">Casas / Chalets</span>
                             </label>
-                            <input type="checkbox" class="inicio__card-check btn-check" id="hoteles"
-                                autocomplete="off" [(ngModel)]="hotels" name="hotels">
+                            <input type="checkbox" class="inicio__card-check btn-check" id="hoteles" autocomplete="off"
+                                [(ngModel)]="hotels" name="hotels">
                             <label
                                 class="inicio__card-checklabel btn btn-outline-secondary d-flex justify-content-center  align-items-center"
                                 for="hoteles">
@@ -35,8 +35,7 @@
                                     class="inicio__card-checklabel-graphics">
                                     <path
                                         d="M19 2H9c-1.103 0-2 .897-2 2v6H5c-1.103 0-2 .897-2 2v9a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4c0-1.103-.897-2-2-2zM5 12h6v8H5v-8zm14 8h-6v-8c0-1.103-.897-2-2-2H9V4h10v16z" />
-                                    <path
-                                        d="M11 6h2v2h-2zm4 0h2v2h-2zm0 4.031h2V12h-2zM15 14h2v2h-2zm-8 .001h2v2H7z" />
+                                    <path d="M11 6h2v2h-2zm4 0h2v2h-2zm0 4.031h2V12h-2zM15 14h2v2h-2zm-8 .001h2v2H7z" />
                                 </svg>
                                 <span class="inicio__card-checklabel-text ms-2">Hoteles</span>
                             </label>
@@ -78,31 +77,34 @@
                             <div class="inicio__card-info col-4 col-md-3 d-flex flex-column justify-content-end">
                                 <div>Fecha de salida</div>
                             </div>
-                            <div class="inicio__card-info col-4 col-md-3 offset-md-3 d-flex flex-column justify-content-end">
+                            <div
+                                class="inicio__card-info col-4 col-md-3 offset-md-3 d-flex flex-column justify-content-end">
                                 <div>Nº personas</div>
                             </div>
                         </div>
                         <div class="row mb-4">
                             <div class="col-4 col-md-3">
-                                <input type="date" class="inicio__card-control form-control" [(ngModel)]="start" name="start" [min]="minDate" (ngModelChange)="updateMinEndDate($event)">
+                                <input type="date" class="inicio__card-control form-control" [(ngModel)]="start"
+                                    name="start" [min]="minDate" (ngModelChange)="updateMinEndDate($event)">
                             </div>
                             <div class="col-4 col-md-3">
-                                <input type="date" class="inicio__card-control form-control" [(ngModel)]="end" name="end" [min]="minEndDate">
+                                <input type="date" class="inicio__card-control form-control" [(ngModel)]="end"
+                                    name="end" [min]="minEndDate">
                             </div>
                             <div class="col-4 col-md-3 offset-md-3">
-                                <input type="number" class="inicio__card-control form-control" [(ngModel)]="people" name="people" min="1">
+                                <input type="number" class="inicio__card-control form-control" [(ngModel)]="people"
+                                    name="people" min="1">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <button class="inicio__card-submit btn btn-secondary" type="submit" (click)="searchAccommodation()">Encuentra tu
+                                <button class="inicio__card-submit btn btn-secondary" type="submit"
+                                    (click)="searchAccommodation()">Encuentra tu
                                     alojamiento</button>
                             </div>
                         </div>
                     </form>
                 </div>
-                <div class="fw-bolder mt-2">{{user?.token}}</div>
-                <button class="inicio__card-submit btn btn-secondary" type="submit" [routerLink]="['/admin-users']">ADMIN</button>
             </div>
         </div>
     </section>
@@ -174,5 +176,6 @@
     </section>
 </main>
 <app-footer></app-footer>
-<ngx-spinner bdColor = "rgba(0,0,0,0.4)" size = "medium" color = "#272a57" type = "ball-square-spin" [fullScreen] = "true"></ngx-spinner>
+<ngx-spinner bdColor="rgba(0,0,0,0.4)" size="medium" color="#272a57" type="ball-square-spin"
+    [fullScreen]="true"></ngx-spinner>
 <app-top-button></app-top-button>
